--- a/src/webapi/indicadores.webapi/indicadores.webapi.csproj
+++ b/src/webapi/indicadores.webapi/indicadores.webapi.csproj
@@ -171,6 +171,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AreaModel.cs" />
+    <Compile Include="Models\GraphValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
